// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`can render into snapshots 1`] = `
<div
  class="App"
>
  <header
    class="header"
  >
    <img
      alt="logo"
      class="logo"
      src="logo.svg"
    />
    <h1
      class="title"
    >
      Welcome to React
    </h1>
  </header>
  <p
    class="intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
  <div
    class="thing"
  />
</div>
`;

exports[`can shallow render into snapshots 1`] = `
<div
  class="App"
>
  <header
    class="header"
  >
    <img
      alt="logo"
      class="logo"
      src="logo.svg"
    />
    <h1
      class="title"
    >
      Welcome to React
    </h1>
  </header>
  <p
    class="intro"
  >
    To get started, edit 
    <code>
      src/App.js
    </code>
     and save to reload.
  </p>
  <Thing />
</div>
`;
